--- a/statistics.html
+++ b/statistics.html
@@ -15,8 +15,8 @@
         <h2 class="subtitle">Smart Light Sense</h2>
         </a>
         <nav>
-            <a href="statistics.html" class="icon-nav icon-settings"></a>
-            <a href="settings.html" class="icon-nav icon-statistics"></a>
+            <a href="settings.html" class="icon-nav icon-settings"></a>
+            <a href="statistics.html" class="icon-nav icon-statistics"></a>
         </nav>
 
     </header>
